--- a/vishnuDevops/vishnuDevops.csproj
+++ b/vishnuDevops/vishnuDevops.csproj
@@ -131,6 +131,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IService.cs" />
+    <Compile Include="Service\Service.cs" />
+    <Compile Include="Service\Vishnu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
