--- a/vishnuDevops/vishnuDevops.csproj
+++ b/vishnuDevops/vishnuDevops.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\IService.cs" />
     <Compile Include="Service\Vishnu.cs" />
+    <Compile Include="Test\TestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
